--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "budo": "11.2.0"
   },
   "dependencies": {
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "victor": "^1.1.0"
   }
 }
