--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "canvas-fit": "^1.5.0",
     "normalize.css": "^8.0.0",
+    "simplex-noise": "^2.4.0",
     "victor": "^1.1.0"
   }
 }
